<resources>
    <string name="app_name">BSRDigiCoin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="user">USER</string>
    <string name="graph">graph</string>
    <string name="new_user_sign_up_here">New User? Sign Up here !</string>
    <string name="low_value">Low Value</string>
    <string name="decoin_stock">Decoin Stock</string>
</resources>