<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.bsrdigicoin.viewmodel.LoginViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LOGIN PAGE"
            android:layout_marginTop="35dp"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggle_button_group"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:weightSum="2"
            app:singleSelection="true"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                app:icon="@drawable/ic_user"
                android:id="@+id/toggle_btn_user"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:iconGravity="textStart"
                app:iconPadding="20dp"
                android:elevation="1dp"
                android:text="@string/user" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/toggle_btn_admin"
                app:icon="@drawable/ic_admin"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:iconGravity="textStart"
                app:iconPadding="20dp"
                android:elevation="1dp"
                android:text="@string/admin" />


        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="15dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_user">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="15dp"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup_button"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:layout_height="62dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="12sp"
            app:iconGravity="textStart"
            android:text="@string/new_user_sign_up_here" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login_button"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="25dp"
            style="?attr/materialButtonOutlinedStyle"
            app:icon="@drawable/ic_login"
            android:onClick="@{(v) -> loginViewModel.onClick(v)"
            app:iconGravity="textStart"
            app:iconPadding="20dp"
            android:text="LOGIN" />




    </LinearLayout>
</layout>